<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="logo">Logo</string>
    <string name="hint_email">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>

    <string name="hint_name">Fullname</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already Registered! Login Here.</string>
    <string name="Or">Or</string>
    <string name="registerwith">Register with: </string>
    <string name="googleplus">Google Plus Register</string>
    <string name="phone">Phone number</string>
    <string name="send_to">Share via...</string>
    <string name="show_rest">Show Restaraunts</string>

    <string-array name="city_name">

        <item>Noida</item>
        <item>Delhi</item>
    </string-array>

    <string-array name="city_location">

        <item>Sector 125</item>
        <item>Sector 47</item>
        <item>Pitam Pura</item>

    </string-array>

</resources>
