<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/lnl"
    android:background="@drawable/loginback">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ToolBarStyle"
        android:background="@color/actionbar_color">

        <TextView
            android:visibility="visible"
            android:id="@+id/text_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In or Register"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frame_login"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/actionbar_color"/>

        <LinearLayout
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total"
                android:textSize="16dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:visibility="invisible"
                android:id="@+id/checkout_total_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
    </FrameLayout>
<!-- 
    <FrameLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/frame" >
    
    <View 
        android:id="@+id/view"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:background="#323" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/keyhole"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/logo" />
    
    </FrameLayout> -->
    
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp" >
 <!--  android:layout_below="@+id/frame" -->


        <EditText
            android:id="@+id/loginemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
 
        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!--

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Email"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>
        -->

        <!-- Login Button -->
 
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />
 
        <!-- Link to Login Screen -->
 
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btnLinkToForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="Forgot Password? Click Here"
            android:textAllCaps="false"
            android:textColor="#323"
            android:textSize="15sp" />
    </LinearLayout>
    
</LinearLayout>
